fixed the column visibility not being applied on reload

--- a/static/tables.css
+++ b/static/tables.css
@@ -61,10 +61,6 @@
     overflow: hidden;
 }
 
-td:first-child input {
-    font-weight: 700;
-}
-
 .parameterTableVisibilityContainer{
     position:absolute;
     right: 320px;
